<resources>
    <string name="app_name" translatable="false">Petit Coeur</string>
    <string name="Name">Name</string>
    <string name="name">What\'s your name ?</string>
    <string name="buttonstart">Start</string>
    <string name="profil">Who are you ?</string>
    <string name="sexe">You Are</string>
    <string name="age">Your Age</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="autre_sexe">other</string>
    <string name="Previous_Step">Previous Step</string>
    <string name="next_step">Next Step</string>
    <string name="heart_condition">Do you have a heart condition ?</string>
    <string name="diabetic">Are you diabetic ?</string>
    <string name="first_degree_relative">Do you have a first-degree relative (father, mother, brother or sister) who had heart problems (heart attack, stroke, sudden death) before age 55 for a man or before age 65 for a woman ?</string>
    <string name="cholesterol">Do you have a cholesterol problem ?</string>
    <string name="doctor_cardiovascular">Have you already checked with your doctor about your cardiovascular risk ? (Yes/No/I don\'t remember)</string>
    <string name="cardiac_chekup">Have you ever had a cardiac check-up (Default = No)</string>
    <string name="cardiologist">Have you ever consulted a cardiologist ?</string>
    <string name="drink">Do you ever drink more than 3 glasses of alcohol in a day once or twice a week (including wine and beer)?</string>
    <string name="energy">Do you ever drink energy drinks ?</string>
    <string name="sleep">Do you sleep more than 7 hours a night ?</string>
    <string name="sleep_disorders">Are you prone to sleep disorders ?</string>
    <string name="federation_cardiology">French Federation of Cardiology</string>
    <string name="finish">Finish</string>
    <string name="bilan">Your review</string>
    <string name="heart_condition_2">Heart condition ?</string>
    <string name="diabetic_2">Diabetic ?</string>
    <string name="cholesterol_2">Cholesterol problem ?</string>
    <string name="yourProfil" >Your profil</string>
    <string name="myHeart">My heart</string>
    <string name="myHeartMonitoring">My heart monitoring</string>
    <string name="myHeartMonitoring">My heart monitoring</string>
    <string name="HealthPractice" >My health practice</string>
</resources>