<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/nextstep2"
        android:layout_width="160dp"
        android:layout_height="54dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="80dp"
        android:text="@string/next_step"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toEndOf="@+id/previousstep2" />

    <Button
        android:id="@+id/previousstep2"
        android:layout_width="160dp"
        android:layout_height="54dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="80dp"
        android:text="@string/Previous_Step"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/nextstep"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinner7"
        android:layout_width="364dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Spinner
        android:id="@+id/spinner6"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Spinner
        android:id="@+id/spinner5"
        android:layout_width="359dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="195dp"
        android:layout_height="117dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026"
        app:srcCompat="@drawable/img_coeur"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="360dp"
        android:layout_height="19dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="156dp"
        android:text="@string/heart_condition"
        android:textColor="#DD2C00"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="360dp"
        android:layout_height="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="240dp"
        android:text="@string/diabetic"
        android:textColor="#DD2C00"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="363dp"
        android:layout_height="82dp"
        android:layout_marginStart="24dp"
        android:text="@string/first_degree_relative"
        android:textColor="#DD2C00"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="349dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="364dp"
        android:layout_height="23dp"
        android:text="@string/cholesterol"
        android:textColor="#DD2C00"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="497dp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:entries="Yes"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="48dp" />

</androidx.constraintlayout.widget.ConstraintLayout>